aws/mtc-dev-env/main.tf
# Create a VPC
resource "aws_vpc" "mtc_vpc" {
  cidr_block           = "10.123.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    "Name" = "mtc-dev"
  }
}

resource "aws_subnet" "mtc_public_subnet" {
  vpc_id     = aws_vpc.mtc_vpc.id
  cidr_block = "10.123.1.0/24"
  #   availability_zone = "us-east-1"
  map_public_ip_on_launch = true

  tags = {
    Name = "mtc-dev-public"
  }
}

resource "aws_internet_gateway" "mtc_igw" {
  vpc_id = aws_vpc.mtc_vpc.id

  tags = {
    Name = "mtc-dev-ig"
  }
}

resource "aws_route_table" "mtc_public_rt" {
  vpc_id = aws_vpc.mtc_vpc.id

  tags = {
    Name = "mtc-dev-rt"
  }
}

resource "aws_route" "mtc_default_rout" {
  route_table_id         = aws_route_table.mtc_public_rt.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.mtc_igw.id
}

resource "aws_route_table_association" "mtc_public_assoc" {
  subnet_id      = aws_subnet.mtc_public_subnet.id
  route_table_id = aws_route_table.mtc_public_rt.id
}

resource "aws_security_group" "mtc_dev_sg" {
  name        = "mtc-dev"
  description = "mtc dev security group"
  vpc_id      = aws_vpc.mtc_vpc.id

  ingress {
    from_port       = 0
    to_port        = 0
    protocol   = "-1"
    cidr_blocks = ["0.0.0.0/0"]

  }

  egress  {
    from_port       = 0
    to_port         = 0
    protocol   = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}

resource "aws_key_pair" "mtc_auth" {
  key_name = var.instanceAuth 
  public_key = file(var.authFile) 
}

resource "aws_instance" "mtc_dev_node" {
  instance_type = "t2.micro"
  ami = data.aws_ami.ubuntu.id
  key_name = aws_key_pair.mtc_auth.id #key_name
  vpc_security_group_ids = [ aws_security_group.mtc_dev_sg.id ]
  subnet_id = aws_subnet.mtc_public_subnet.id 

  user_data = file("userdata.tpl")

  tags = {
    "Name" = "mtc-dev-node"
  }

  root_block_device {
    volume_size = 30
  }
}
